Implement filtering of warps by transport mode.
